@@ -10,20 +10,18 @@ import_module('concurrent.futures')
 
 
 def suite():
-    tests_file = os.path.join(os.path.dirname(__file__), 'tests.txt')
-    with open(tests_file) as fp:
-        test_names = fp.read().splitlines()
     tests = unittest.TestSuite()
     loader = unittest.TestLoader()
-    for test_name in test_names:
-        mod_name = 'test.' + test_name
-        try:
-            __import__(mod_name)
-        except unittest.SkipTest:
-            pass
-        else:
-            mod = sys.modules[mod_name]
-            tests.addTests(loader.loadTestsFromModule(mod))
+    for fn in os.listdir(os.path.dirname(__file__)):
+        if fn.startswith("test") and fn.endswith(".py"):
+            mod_name = 'test.test_asyncio.' + fn[:-3]
+            try:
+                __import__(mod_name)
+            except unittest.SkipTest:
+                pass
+            else:
+                mod = sys.modules[mod_name]
+                tests.addTests(loader.loadTestsFromModule(mod))
     return tests
 
 
